# spotify-recommender-system

./: .gitignore  Dockerfile  Makefile  README.md  app.py  collaborative_filtering.py  content_based_filtering.py  dag.md  data_cleaning.py  dvc.yaml  hybrid_recommendations.py  pyproject.toml  requirements-dev.txt  requirements-v1.txt  requirements.txt  test_app.py  transform_filtered_data.py
.dvc/: config
.github/workflows/: ci.yaml
data/interim/: .gitignore
data/processed/: .gitignore  transformed_hybrid_data.npz
data/raw/: .gitignore
docs/: mkdocs.yml
docs/docs/: index.md
models/: .gitignore
notebooks/: Spotify_Collaborative_Filtering.ipynb  Spotify_Content_Based_Filtering.ipynb
