[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spotify_recommendar_system"
version = "0.0.1"
description = "This would be a Spotify recommender system application"
authors = [
  { name = "Paramjit Singh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["spotify_recommendar_system"]
force_sort_within_sections = true
